[tool.poetry]
name = "fmcsa"
version = "0.1.0"
description = ""
authors = ["juanj72 <juan.jara@campusucc.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
certifi = "^2024.8.30"
charset-normalizer = "^3.4.0"
et-xmlfile = "^2.0.0"
idna = "^3.10"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
